namespace java net.lab1318.costume.api.services.institution
namespace * costume.api.services.institution

exception NoSuchInstitutionException {
}
